--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,3 +22,28 @@ header, .project:not(:last-child) {
   font-weight: bold;
   margin-left: -5px;
 }
+
+#prodcard {
+  margin: 5px;
+  border: solid;
+  padding: 10px;
+  height: 200px;
+  width: 300px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  height: 500px;
+  max-width: 1000px;
+  margin-right: 300px;
+  margin-top: 60px;
+  margin-left: 10px;
+}
+
+#top-picks {
+  position: relative;
+  top: 60px;
+  margin-left: 10px;
+}
