--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,30 +1,40 @@
 <div class="row">
-  <div class="col-auto">
+  <div class="welcome col-auto">
     <h2>Welcome, {{name}}!</h2>
   </div>
 </div>
 
-<div class="row mt-4">
-  <div class="col-md-6">
-    <h3>Create a New Project:</h3>
-
-    <form class="form new-project-form">
-      <div class="form-group">
-        <label for="project-name">project name:</label>
-        <input class="form-input" type="text" id="project-name" name="project-name" />
+<div class="profile-main row mt-4">
+  <div class="profile-container d-flex justify-content-center align-items-center">
+    <div class="profile-card">
+      <div class="upper">
+        <img src="https://i.imgur.com/Qtrsrk5.jpg" class="img-fluid">
       </div>
-      <div class="form-group">
-        <label for="project-funding">needed funding ($):</label>
-        <input class="form-input" type="number" id="project-funding" name="project-funding" />
+      <div class="user text-center">
+        <div class="profile">
+          <img src="https://i.imgur.com/JgYD2nQ.jpg" class="rounded-circle" width="80">
+        </div>
       </div>
-      <div class="form-group">
-        <label for="project-desc">description:</label>
-        <textarea class="form-input" id="project-desc" name="project-desc"></textarea>
+      <div class="mt-5 text-center">
+        <h4 class="mb-0">{{name}}</h4>
+        <span class="text-muted d-block mb-2"></span>
+        <button class="btn btn-primary btn-sm follow">View Cart</button>
+        <div class="d-flex justify-content-between align-items-center mt-4 px-4">
+          <div class="stats">
+            <h6 class="mb-0">Followers</h6>
+            <span>8,797</span>
+          </div>
+          <div class="stats">
+            <h6 class="mb-0">Projects</h6>
+            <span>142</span>
+          </div>
+          <div class="stats">
+            <h6 class="mb-0">Ranks</h6>
+            <span>129</span>
+          </div>
+        </div>
       </div>
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
-      </div>
-    </form>
+    </div>
   </div>
 
   {{#if projects.length}}
