--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
         <a href="/">SPORT STASH</a>
       </h1>
       <nav>
-        <p style="display: inline; margin: 0;">Hello</p>
+        <p style="display: inline; margin: 0;"></p>
         <!-- Conditionally render login or logout links -->
         {{#if logged_in}}
         <a href="/profile">profile</a> |
