added cart funtionality, made new handlebar pages

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -18,7 +18,7 @@
       <div class="mt-5 text-center">
         <h4 class="mb-0">{{name}}</h4>
         <span class="text-muted d-block mb-2"></span>
-        <button class="btn btn-primary btn-sm follow">View Cart</button>
+        <a href="/cart/{{this.id}}"><button class="btn btn-primary btn-sm follow">View Cart</button></a>
         <div class="d-flex justify-content-between align-items-center mt-4 px-4">
         </div>
       </div>
