--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,13 +38,13 @@ header, .project:not(:last-child) {
   height: 500px;
   max-width: 1000px;
   margin-right: 300px;
-  margin-top: 60px;
+  margin-top: 30px;
   margin-left: 10px;
 }
 
 #top-picks {
   position: relative;
-  top: 60px;
+  top: 20px;
   margin-left: 10px;
 }
 
@@ -72,4 +72,21 @@ header, .project:not(:last-child) {
   justify-content: center;
   align-items: center;
   border: solid;
+}
+
+.cat-nav {
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  border: solid;
+  background-color: #065b83;
+}
+
+.cat-nav a {
+  text-decoration: none;
+  color: white;
+}
+
+.cat-nav a:hover {
+  color: black;
 }
