--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -1,3 +1,4 @@
+{{#if logged_in}}
  <h1>Your shopping cart</h1>
       <h2>Here Are Your Items</h2>
       
@@ -84,3 +85,21 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+
+<div>
+  <main class="container container-fluid mt-5">
+    {{#each products}}
+    <a href="/product/{{this.id}}" class="product-link">
+      <div id="prodcard" class="product-card">
+        <h2>{{this.product_name}}</h2>
+        <p class="condition">Condition: {{this.condition}}</p>
+        <p>Seller: {{this.user.name}}</p>
+      </div>
+    </a>
+    {{/each}}
+
+  </main>
+</div>
+{{else}}
+<p>Please Log In To View Your Cart</p>
+{{/if}}
