--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -103,3 +103,24 @@
 {{else}}
 <p>Please Log In To View Your Cart</p>
 {{/if}}
+
+
+<h1>Your Shopping Cart</h1>
+
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>Product Name</th>
+      <th>Quantity</th>
+      <th>Price</th>
+      <th>Total</th>
+      <th>Action</th> <!-- Remove item button -->
+    </tr>
+  </thead>
+  <tbody id="cartTable">
+    <!-- Cart data will be dynamically generated here -->
+  </tbody>
+</table>
+
+<button type="button" class="btn btn-secondary" id="continueShopping">Continue Shopping</button>
+<button type="button" class="btn btn-primary" id="checkout">Checkout</button>
