--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -1,126 +1,27 @@
 {{#if logged_in}}
- <h1>Your shopping cart</h1>
-      <h2>Here Are Your Items</h2>
-      
-      <!-- Cart table -->
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th scope="col">UserId</th>
-            <th scope="col">ProductId</th>
-            <th scope="col">Product Name </th>
-            <th scope="col">Price</th>
-          </tr>
-        </thead>
-        <tbody id="cartTable">
-          <!-- Cart data -->
-        </tbody>
-      </table>
-      <!-- /Cart table -->
-
-      <button type="button" class="btn btn-secondary" id="continueBrowsing">
-        Continue browsing
-      </button>
-      <button type="button" class="btn btn-primary" id="confirmPurchase">
-        Confirm purchase
-      </button>
-
-      <!-- Purchase confirmation modal -->
-      <div
-        class="modal fade"
-        id="purchaeConfirmationModal"
-        data-backdrop="static"
-        data-keyboard="false"
-        tabindex="-1"
-        role="dialog"
-        aria-labelledby="purchaeConfirmationModal"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="purchaeConfirmationModal">
-                Purchase confirmation
-              </h5>
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <p>Payment received.</p>
-              <p>See you next time</p>
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-dismiss="modal"
-              >
-                Close
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /Purchase confirmation modal -->
- 
- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-<div>
-  <main class="container container-fluid mt-5">
-    {{#each products}}
-    <a href="/product/{{this.id}}" class="product-link">
-      <div id="prodcard" class="product-card">
-        <h2>{{this.product_name}}</h2>
-        <p class="condition">Condition: {{this.condition}}</p>
-        <p>Seller: {{this.user.name}}</p>
-      </div>
-    </a>
-    {{/each}}
-
-  </main>
-</div>
-{{else}}
-<p>Please Log In To View Your Cart</p>
-{{/if}}
-
-
-<h1>Your Shopping Cart</h1>
-
+<h1>Your shopping cart</h1>
 <table class="table table-hover">
   <thead>
     <tr>
       <th>Product Name</th>
-      <th>Quantity</th>
       <th>Price</th>
-      <th>Total</th>
-      <th>Action</th> <!-- Remove item button -->
     </tr>
+    {{#each products}}
+    <tr>
+      <td>
+        {{product_name}}
+      </td>
+      <td>${{price}}</td>
+    </tr>
+    {{/each}}
   </thead>
   <tbody id="cartTable">
     <!-- Cart data will be dynamically generated here -->
   </tbody>
 </table>
 
-<button type="button" class="btn btn-secondary" id="continueShopping">Continue Shopping</button>
-<button type="button" class="btn btn-primary" id="checkout">Checkout</button>
+<a href="/"><button type="button" class="btn btn-secondary" id="continueShopping">Continue Shopping</button></a>
+<a href="/checkout/{{id}}"><button type="button" class="btn btn-primary" id="checkout">Checkout</button></a>
+{{else}}
+<p>Please Log In To View Your Cart</p>
+{{/if}}
