--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
         <a href="/">home</a> |
         <a href="/profile">profile</a> |
         <button class="no-button" id="logout">logout</button> |
-        <a href="/cart">My Cart</a>
+        <a href="/cart/{{user.id}}">My Cart</a>
         {{else}}
         <a href="/">home</a> |
         <a href="/login">login</a>
