--- a/views/productListing.handlebars
+++ b/views/productListing.handlebars
@@ -13,26 +13,30 @@
 
 <body>
     <div class="list-container">
-        <div id="prodcard" class="product-card-list">
-            <h2>{{product.product_name}}</h2>
-            <p class="condition">Condition: {{this.condition}}</p>
-            <p>Seller: {{this.user.name}}</p>
+        <div id="prodcard" class="product-card-list" style="background-image: url('{{product.image}}');
+      background-size: 100% 100%;
+      background-repeat: no-repeat;
+      background-position: right; box-shadow: 0px 3px 15px rgba(0,0,0,0.2);">
         </div>
         <div class="list-info">
-            <p>{{product.product_name}}</p>
-            <p id="item-price">${{product.price}}</p>
+            <h2 id="list-name">{{product.product_name}}</h2>
             <p>Condition: {{product.condition}}</p>
+            <p id="item-price">${{product.price}}</p>
             {{#if logged_in}}
             <button id="add-cart">Add To Cart</button>
             {{else}}
             <a href="/login" ><button id="else-add-cart">Login to Add to Cart</button> </a>
             {{/if}}
         </div>
+        
+        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS"><div class="list-adspace" id="list-adtext">Explore CSS</div></a>
+
         <div class="list-description">
-            <p>This is a test description.</p>
+            <p>Product Description:</p>
+            <p>{{product.description}}</p>
         </div>
         <div class="list-review">
-            <p>These are the product reviews.</p>
+            <p>Product Reviews:</p>
         </div>
     </div>
 
