--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="welcome col-auto">
-    <h2>Welcome, {{name}}!</h2>
+    <h2 style="margin-top: 10px;">Welcome, {{name}}!</h2>
   </div>
 </div>
 
@@ -8,11 +8,11 @@
   <div class="profile-container d-flex justify-content-center align-items-center">
     <div class="profile-card">
       <div class="upper">
-        <img src="https://i.imgur.com/Qtrsrk5.jpg" class="img-fluid">
+        <img class="header-image" src="https://cdn.schoolblocks.com/organizations/ecfb5e78-28e9-44b8-b8a9-80d6d50b77b0/blocks/0e286c56-f95a-44af-9cc1-5dd6e916f215/ct48qr-440-4402160_welcome-to-xlr8-sports-sports-banner-design-png.png" class="img-fluid">
       </div>
       <div class="user text-center">
         <div class="profile">
-          <img src="https://i.imgur.com/JgYD2nQ.jpg" class="rounded-circle" width="80">
+          <img src="https://st3.depositphotos.com/6672868/13701/v/450/depositphotos_137014128-stock-illustration-user-profile-icon.jpg" class="rounded-circle" width="80">
         </div>
       </div>
       <div class="mt-5 text-center">
