--- a/public/css/listing.css
+++ b/public/css/listing.css
@@ -1,62 +1,95 @@
+body {
+    background-color: #F2F2F2;
+    color: darkslategray;
+}
+
 .list-container {
-    border: solid;
-    display: flex;
+    display: grid;
+    grid-template-columns: auto auto auto;
     margin-top: 30px;
     flex-wrap: wrap;
     justify-content: space-around;
+    max-height: 680px;
 }
 
 .list-info {
-    border: solid;
-    border-radius: 10px;
-    margin: 5px;
-    height: 200px;
-    width: 500px;
+    height: 400px;
+    width: 400px;
     display: inline;
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+    background-color: white;
+    margin-top: 5px;
+}
+
+#list-name {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
 }
 
 .list-info p {
-    margin-left: 30px;
     position: relative;
-    top: 30px;
+    display: flex;
+    justify-content: center;
 }
 
 .list-description {
-    border: solid;
     height: 200px;
-    width: 800px;
+    width: 600px;
+    margin-left: 5px;
+    background-color: white;
+    position: relative;
+    top: -180px;
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+}
+
+.list-description p {
+    padding: 15px;
 }
 
 .list-review {
-    border: solid;
-    height: 400px;
-    width: 500px;
+    height: 200px;
+    width: 400px;
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
     position: relative;
-    top: -200px;
+    top: -180px;
+    background-color: white;
+}
+
+.list-review p {
+    padding: 15px;
+}
+
+.list-adspace {
+    height: 600px;
+    margin-top: 5px;
+    width: 300px;
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
 }
 
 .product-card-list {
-    position: relative;
-    border-radius: 10px;
     height: 400px !important;
-    width: 800px !important;
+    width: 600px !important;
 }
 
 #item-price {
-    font-size: 80px;
-    position: absolute;
-    right: 130px;
-    top: 180px;
+    font-size: 60px;
+    margin-top: 70px;
 }
 
 #add-cart {
-    margin-left: 30px;
+    height: 50px;
+    width: 300px;
     position: relative;
-    top: 40px;
+    right: -50px;
+    margin-top: 10px;
 }
 
 #else-add-cart {
-    margin-left: 30px;
     position: relative;
-    top: 40px;
+    height: 50px;
+    width: 300px;
+    right: -50px;
+    margin-top: 10px;
 }
