--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sport Stash</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
+    integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 
@@ -14,7 +16,8 @@
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
       <h1 class="main-title">
-        <a href="/">SPORT STASH</a>
+        <a href="/"><img class="logo-image" src="/assets/images/image.png"></a>
+        <a href="/" class="title">SPORT STASH</a>
       </h1>
 
       <nav>
@@ -33,13 +36,139 @@
     </header>
     <main>
       <nav class="cat-nav">
-        <a href="/categories/1">Basketball</a> |
-        <a href="/categories/2">Soccer</a> |
-        <a href="/categories/3">Volleyball</a> |
-        <a href="/categories/4">Badminton</a> |
-        <a href="/categories/5">Golf</a> |
-        <a href="/categories/6">Football</a> |
-        <a href="/categories">View All</a>
+        <div class="pure-menu pure-menu-horizontal">
+          <ul class="pure-menu-list">
+            <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
+              <a href="/categories/1" id="menuLink1" class="pure-menu-link">Basketball</a>
+              <ul class="pure-menu-children">
+                <li class="pure-menu-item">
+                  <a href="/product/1" class="pure-menu-link">Basketball</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/2" class="pure-menu-link">Sleeves</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/3" class="pure-menu-link">Shoes</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/4" class="pure-menu-link">Jersey</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div> |
+        <div class="pure-menu pure-menu-horizontal">
+          <ul class="pure-menu-list">
+            <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
+              <a href="/categories/2" id="menuLink1" class="pure-menu-link">Soccer</a>
+              <ul class="pure-menu-children">
+                <li class="pure-menu-item">
+                  <a href="/product/5" class="pure-menu-link">Cleats</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/6" class="pure-menu-link">Shinpads</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/7" class="pure-menu-link">Ball</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/8" class="pure-menu-link">Gloves</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div> |
+        <div class="pure-menu pure-menu-horizontal">
+          <ul class="pure-menu-list">
+            <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
+              <a href="/categories/3" id="menuLink1" class="pure-menu-link">Volleyball</a>
+              <ul class="pure-menu-children">
+                <li class="pure-menu-item">
+                  <a href="/product/9" class="pure-menu-link">Ball</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/10" class="pure-menu-link">Kneepads</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/11" class="pure-menu-link">Net</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/12" class="pure-menu-link">Shoes</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div> |
+        <div class="pure-menu pure-menu-horizontal">
+          <ul class="pure-menu-list">
+            <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
+              <a href="/categories/4" id="menuLink1" class="pure-menu-link">Badminton</a>
+              <ul class="pure-menu-children">
+                <li class="pure-menu-item">
+                  <a href="/product/13" class="pure-menu-link">Shuttlecocks</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/14" class="pure-menu-link">Racquet</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/15" class="pure-menu-link">Net</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/16" class="pure-menu-link">Shoes</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div> |
+        <div class="pure-menu pure-menu-horizontal">
+          <ul class="pure-menu-list">
+            <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
+              <a href="/categories/5" id="menuLink1" class="pure-menu-link">Golf</a>
+              <ul class="pure-menu-children">
+                <li class="pure-menu-item">
+                  <a href="/product/17" class="pure-menu-link">Golf Clubs</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/18" class="pure-menu-link">Golf Bag</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/19" class="pure-menu-link">Golf Shoes</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/20" class="pure-menu-link">Golf Balls</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div> |
+        <div class="pure-menu pure-menu-horizontal">
+          <ul class="pure-menu-list">
+            <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
+              <a href="/categories/6" id="menuLink1" class="pure-menu-link">Football</a>
+              <ul class="pure-menu-children">
+                <li class="pure-menu-item">
+                  <a href="/product/21" class="pure-menu-link">Padding</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/22" class="pure-menu-link">Helmet</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/23" class="pure-menu-link">Cleats</a>
+                </li>
+                <li class="pure-menu-item">
+                  <a href="/product/24" class="pure-menu-link">Ball</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div> |
+        <div class="pure-menu pure-menu-horizontal">
+          <ul class="pure-menu-list">
+            <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
+              <a href="/categories" id="menuLink1" class="pure-menu-link">View All</a>
+            </li>
+          </ul>
+        </div>
       </nav>
       {{{ body }}}
 
